syntax = "proto3";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc ForgotPassword (ForgotPasswordRequest) returns (ForgotPasswordResponse);
  rpc ResetPassword (ResetPasswordRequest) returns (ResetPasswordResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string user_name = 3;
  string first_name = 4;
  string last_name = 5;
}

message RegisterResponse {
  string message = 1;
}

message ForgotPasswordRequest {
  string email = 1;
}

message ForgotPasswordResponse {
  string message = 1;
}

message ResetPasswordRequest {
  string user_email = 1;
  string new_password = 2;
  string confirm_password = 3;
  string url_token = 4;
}

message ResetPasswordResponse {
  string message = 1;
}

message LoginRequest {
  string user_name = 1;
  string password = 2;
}

message LoginResponse {
  string message = 1;
  string token = 2;
  string expires = 3;
}

message GetUserRequest {
  int32 user_id = 1;
}

message GetUserResponse {
  int32 user_id = 1;
  string email = 2;
  string hash = 3;
  string salt = 4;
  string user_name = 5;
  string first_name = 6;
  string last_name = 7;
  string created_at = 8;
  string updated_at = 9;
}
